<resources>
    <string name="app_name">HomeSec Admin</string>
    <string name="action_settings">Settings</string>
    <string name="msg_welcome">Welcome</string>
    <string name="msg_logged_in">Logged in.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_remember_me">Remember me</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_login_failed">Login failed.</string>

    <!-- Add device -->
    <string name="add_device">Add a new device</string>
    <string name="bt_add_device_txt">Add</string>
    <string name="dev_id">Device ID</string>
    <string name="dev_pin">Pairing Code</string>
    <string name="sample_dev_id">SampleDeviceID12345</string>
    <string name="sample_dev_pin">unsafe</string>

    <!-- ID LIST -->
    <string name="id_list_list_header_title">Identities</string>

    <!-- Errors -->
    <string name="oops">Opps…</string>
    <string name="errro_cannot_get_id_list">Cannot retrieve ID list</string>
    <string name="title_activity_identity_list">ID Manager</string>
    <string name="title_activity_permissions">PermissionsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accessibility_open_drawer"/>
    <string name="accessibility_close_drawer"/>
    <string name="title_activity_temperature_reader">TemperatureReaderActivity</string>
</resources>
