<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/devId"
        android:contentDescription="@string/dev_id"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/sample_dev_pin"
        android:ems="10"
        android:id="@+id/pin"
        android:contentDescription="@string/dev_pin"/>

    <Button
        android:text="@string/bt_add_device_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addDevice"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bt_log"
            android:textAlignment="viewStart"/>
    </ScrollView>
</LinearLayout>